# Money-Manager

./: db.sqlite3  manage.py  pyproject.toml
expenses/: admin.py  models.py
expenses/migrations/: 0001_initial.py
money_men/: asgi.py  settings.py  urls.py  wsgi.py
