[tool.poetry]
name = "money-men"
version = "0.1.0"
description = ""
authors = ["menasheh <menasheh@mobileye.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.6"
ipython = "^8.24.0"
faker = "^25.1.0"
django-extensions = "^3.2.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
